--- a/GMI-angular/src/app/common/sidebar/sidebar.component.html
+++ b/GMI-angular/src/app/common/sidebar/sidebar.component.html
@@ -99,7 +99,7 @@
                             account_circle
                         </i>
                         <span class="title leading-none">
-                            My Profile
+                            Mon profil
                         </span>
                     </a>
                 </div>
@@ -109,7 +109,7 @@
                             logout
                         </i>
                         <span class="title leading-none">
-                            Logout
+                            Déconnecter
                         </span>
                     </a>
                 </div>
