--- a/GMI-angular/src/app/dashboard/gestion-intervention/gestion-intervention.component.html
+++ b/GMI-angular/src/app/dashboard/gestion-intervention/gestion-intervention.component.html
@@ -4,7 +4,7 @@
             <h3 class="mb-0 text-[#516359]">Interventions</h3>
         </div>
         <div class="trezo-card-subtitle mt-[10px] sm:mt-0 flex flex-col sm:flex-row items-center gap-3">
-            <input type="text" [(ngModel)]="searchText" placeholder="Rechercher une intervention..." 
+            <input type="text" [(ngModel)]="searchText" (ngModelChange)="onSearchChange()" placeholder="Rechercher une intervention..." 
                 class="border border-gray-300 dark:border-[#172036] rounded-md px-3 py-2 w-full sm:w-auto dark:bg-[#0c1427] dark:text-white" />
             <button type="button" 
                 class="rounded-md inline-block transition-all py-[3.5px] px-[17px] border border-gray-100 dark:border-[#172036] hover:border-[#516359] hover:bg-[#516359] hover:text-white" 
