--- a/GMI-angular/src/app/account-settings/account-settings.component.html
+++ b/GMI-angular/src/app/account-settings/account-settings.component.html
@@ -6,8 +6,8 @@
                     <!-- Profile -->
                     <div class="trezo-card bg-white dark:bg-[#0c1427] mb-[25px] rounded-md">
                         <div class="trezo-card-content">
-                            <div class="relative rounded-t-md">
-                                <img src="images/profile-cover.jpg" alt="cover-image" class="rounded-t-md" />
+                            <div class="relative rounded-t-md w-full h-full">
+                                <img src="images/profile-cover.jpg" alt="cover-image" class="rounded-t-md w-full h-full object-cover" />
                             </div>
                             <div class="px-[20px] md:px-[30px] pb-[20px] md:pb-[45px] mt-[20px] md:-mt-[60px]">
                                 <div class="md:flex items-end justify-between">
