maj oussema travail

--- a/GMI-angular/src/app/common/header/header.component.html
+++ b/GMI-angular/src/app/common/header/header.component.html
@@ -62,7 +62,7 @@
                             </a>
                         </li>
                         <li>
-                            <a routerLink="/authentication/logout" class="block relative py-[7px] ltr:pl-[50px] ltr:pr-[20px] rtl:pr-[50px] rtl:pl-[20px] text-black dark:text-white transition-all hover:text-primary-500">
+                            <a (click)="logout()" class="block relative py-[7px] ltr:pl-[50px] ltr:pr-[20px] rtl:pr-[50px] rtl:pl-[20px] text-black dark:text-white transition-all hover:text-primary-500 cursor-pointer">
                                 <i class="material-symbols-outlined top-1/2 -translate-y-1/2 !text-[22px] absolute ltr:left-[20px] rtl:right-[20px]">
                                     logout
                                 </i>
