--- a/GMI-angular/src/app/dashboard/projet/projet.component.html
+++ b/GMI-angular/src/app/dashboard/projet/projet.component.html
@@ -108,15 +108,36 @@
             </tbody>
         </table>
     </div>
-
-
-
-
-
-
-
-
-
+    <!-- Pagination -->
+    <div class="flex items-center justify-between mt-4">
+      <div class="text-sm text-gray-500 dark:text-gray-400">
+        Showing {{ (currentPage - 1) * itemsPerPage + 1 }} to {{ Math.min(currentPage * itemsPerPage, totalItems) }} of {{ totalItems }} entries
+      </div>
+      <div class="flex items-center space-x-2">
+        <button 
+          [disabled]="currentPage === 1"
+          (click)="onPageChange(currentPage - 1)"
+          class="px-3 py-1 rounded-md border border-gray-300 dark:border-[#172036] disabled:opacity-50 disabled:cursor-not-allowed hover:bg-gray-100 dark:hover:bg-[#15203c]">
+          Previous
+        </button>
+        <div class="flex items-center space-x-1">
+          <button 
+            *ngFor="let page of getPageNumbers()"
+            (click)="onPageChange(page)"
+            [class.bg-[#516359]]="currentPage === page"
+            [class.text-white]="currentPage === page"
+            class="px-3 py-1 rounded-md border border-gray-300 dark:border-[#172036] hover:bg-gray-100 dark:hover:bg-[#15203c]">
+            {{ page }}
+          </button>
+        </div>
+        <button 
+          [disabled]="currentPage === totalPages"
+          (click)="onPageChange(currentPage + 1)"
+          class="px-3 py-1 rounded-md border border-gray-300 dark:border-[#172036] disabled:opacity-50 disabled:cursor-not-allowed hover:bg-gray-100 dark:hover:bg-[#15203c]">
+          Next
+        </button>
+      </div>
+    </div>
 </div>
 
 <!-- Modal d'ajout d'un Projet -->
