--- a/GMI-angular/src/app/authentication/sign-in/sign-in.component.html
+++ b/GMI-angular/src/app/authentication/sign-in/sign-in.component.html
@@ -10,7 +10,7 @@
     <div class="mx-auto px-[12.5px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1255px]">
         <div class="grid lg:grid-cols-2 gap-[25px] items-center">
             <div class="xl:ltr:-mr-[25px] xl:rtl:-ml-[25px] 2xl:ltr:-mr-[45px] 2xl:rtl:-ml-[45px] rounded-[25px] order-2 lg:order-1">
-                <img src="images/usine.avif" alt="sign-in-image" class="rounded-[25px] h-auto w-auto" >
+                <img src="images/photo_kbira.jpeg" alt="sign-in-image" class="rounded-[25px] h-auto w-auto" >
                <!-- image el kbira  -->
             </div>
             <div class="xl:ltr:pl-[90px] xl:rtl:pr-[90px] 2xl:ltr:pl-[120px] 2xl:rtl:pr-[120px] order-1 lg:order-2">
@@ -31,14 +31,14 @@
       
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                     <div class="mb-[15px] relative">
-                        <label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
+                        <!--<label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
                             Adresse email
-                        </label>
+                        </label>-->
                         <input 
                             type="text" 
                             formControlName="email"
                             class="h-[55px] rounded-md text-black dark:text-white border border-gray-200 dark:border-[#172036] bg-white dark:bg-[#0c1427] px-[17px] block w-full outline-0 transition-all placeholder:text-gray-500 dark:placeholder:text-gray-400 focus:border-primary-500" 
-                            placeholder="example@gmail.com"
+                            placeholder="exemple@gmail.com"
                             [ngClass]="{'border-red-500': loginForm.get('email')?.invalid && loginForm.get('email')?.touched}"
                         >
                         <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="text-red-500 text-sm mt-1">
@@ -47,14 +47,14 @@
                         </div>
                     </div>
                     <div class="mb-[15px] relative" id="passwordHideShow">
-                        <label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
+                       <!-- <label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
                             Mot de passe
-                        </label>
+                        </label> -->
                         <input 
                             [type]="isPasswordVisible ? 'text' : 'password'" 
                             formControlName="password"
                             class="h-[55px] rounded-md text-black dark:text-white border border-gray-200 dark:border-[#172036] bg-white dark:bg-[#0c1427] px-[17px] block w-full outline-0 transition-all placeholder:text-gray-500 dark:placeholder:text-gray-400 focus:border-primary-500" 
-                            placeholder="Type password"
+                            placeholder="Mot de passe"
                             [ngClass]="{'border-red-500': loginForm.get('password')?.invalid && loginForm.get('password')?.touched}"
                         >
                         <button class="absolute text-lg ltr:right-[20px] rtl:left-[20px] bottom-[12px] transition-all hover:text-primary-500" (click)="togglePasswordVisibility()" type="button">
