--- a/GMI-angular/src/app/common/header/header.component.html
+++ b/GMI-angular/src/app/common/header/header.component.html
@@ -54,11 +54,11 @@
                     </div>
                     <ul>
                         <li>
-                            <a routerLink="/dashboard/my-profile" class="block relative py-[7px] ltr:pl-[50px] ltr:pr-[20px] rtl:pr-[50px] rtl:pl-[20px] text-black dark:text-white transition-all hover:text-primary-500">
+                            <a routerLink="/dashboard/profil" class="block relative py-[7px] ltr:pl-[50px] ltr:pr-[20px] rtl:pr-[50px] rtl:pl-[20px] text-black dark:text-white transition-all hover:text-primary-500">
                                 <i class="material-symbols-outlined top-1/2 -translate-y-1/2 !text-[22px] absolute ltr:left-[20px] rtl:right-[20px]">
                                     account_circle
                                 </i>
-                                My Profile
+                                Mon profil
                             </a>
                         </li>
                         <li>
@@ -66,7 +66,7 @@
                                 <i class="material-symbols-outlined top-1/2 -translate-y-1/2 !text-[22px] absolute ltr:left-[20px] rtl:right-[20px]">
                                     logout
                                 </i>
-                                Logout
+                                Déconnecter
                             </a>
                         </li>
                     </ul>
