--- a/GMI-angular/src/app/common/sidebar/sidebar.component.html
+++ b/GMI-angular/src/app/common/sidebar/sidebar.component.html
@@ -91,7 +91,7 @@
                     </a>
                 </div>
                 <span class="block relative font-medium uppercase text-gray-400 mb-[8px] text-xs [&:not(:first-child)]:mt-[22px]">
-                    Test
+                     Mon espace
                 </span>
                 <div class="accordion-item rounded-md text-black dark:text-white mb-[5px] whitespace-nowrap">
                     <a routerLink="/dashboard/profil" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="accordion-button flex items-center transition-all py-[9px] ltr:pl-[14px] ltr:pr-[30px] rtl:pr-[14px] rtl:pl-[30px] rounded-md font-medium w-full relative text-left dark:hover:bg-[#15203c] hover:bg-[#ebf0f5]">
