--- a/GMI-angular/src/app/authentication/reset-password/reset-password.component.html
+++ b/GMI-angular/src/app/authentication/reset-password/reset-password.component.html
@@ -12,34 +12,34 @@
     <div class="mx-auto px-[12.5px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1255px]">
         <div class="grid lg:grid-cols-2 gap-[25px] items-center">
             <div class="xl:ltr:-mr-[25px] xl:rtl:-ml-[25px] 2xl:ltr:-mr-[45px] 2xl:rtl:-ml-[45px] rounded-[25px] order-2 lg:order-1">
-                <img src="images/reset-password.jpg" alt="reset-password-image" class="rounded-[25px]">
+                <img src="images/forget2.png" alt="reset-password-image" class="rounded-[25px] w-200 h-360">
             </div>
             <div class="xl:ltr:pl-[90px] xl:rtl:pr-[90px] 2xl:ltr:pl-[120px] 2xl:rtl:pr-[120px] order-1 lg:order-2">
-                <img src="images/logo-big.svg" alt="logo" class="inline-block dark:hidden">
-                <img src="images/white-logo-big.svg" alt="logo" class="hidden dark:inline-block">
+                <img src="images/logo.png" alt="logo" class="inline-block dark:hidden h-10 w-auto">
+                <img src="images/logo.png" alt="logo" class="hidden dark:inline-block h-10 w-auto">
                 <div class="my-[17px] md:my-[25px]">
                     <h1 class="font-semibold text-[22px] md:text-xl lg:text-2xl mb-[5px] md:mb-[10px]">
-                        Reset Password?
+                        Réinitialiser le mot de passe
                     </h1>
                     <p class="font-medium leading-[1.5] lg:text-md text-[#445164] dark:text-gray-400">
-                        Enter your new password and confirm it another time in the field below.
+                        Saisissez votre nouveau mot de passe et confirmez-le une nouvelle fois dans le champ ci-dessous.
                     </p>
                 </div>
               
                 <div class="mb-[15px] relative" id="passwordHideShow2">
-                    <label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
-                        New Password
-                    </label>
-                    <input [type]="isPassword2Visible ? 'text' : 'password'"  formControlName="password" [value]="password2" (input)="onPassword2Input($event)" class="h-[55px] rounded-md text-black dark:text-white border border-gray-200 dark:border-[#172036] bg-white dark:bg-[#0c1427] px-[17px] block w-full outline-0 transition-all placeholder:text-gray-500 dark:placeholder:text-gray-400 focus:border-primary-500" id="password2" placeholder="Type password">
+                    <!--<label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
+                        Nouveau mot de passe
+                    </label>-->
+                    <input [type]="isPassword2Visible ? 'text' : 'password'"  formControlName="password" [value]="password2" (input)="onPassword2Input($event)" class="h-[55px] rounded-md text-black dark:text-white border border-gray-200 dark:border-[#172036] bg-white dark:bg-[#0c1427] px-[17px] block w-full outline-0 transition-all placeholder:text-gray-500 dark:placeholder:text-gray-400 focus:border-primary-500" id="password2" placeholder="Nouveau mot de passe">
                     <button class="absolute text-lg ltr:right-[20px] rtl:left-[20px] bottom-[12px] transition-all hover:text-primary-500" (click)="togglePassword2Visibility()" type="button">
                         <i [ngClass]="isPassword2Visible ? 'ri-eye-line' : 'ri-eye-off-line'"></i>
                     </button>
                 </div>
                 <div class="mb-[15px] relative" id="passwordHideShow3">
-                    <label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
-                        Confirm Password
-                    </label>
-                    <input [type]="isPassword3Visible ? 'text' : 'password'"  formControlName="confirmpassword" [value]="password3" (input)="onPassword3Input($event)" class="h-[55px] rounded-md text-black dark:text-white border border-gray-200 dark:border-[#172036] bg-white dark:bg-[#0c1427] px-[17px] block w-full outline-0 transition-all placeholder:text-gray-500 dark:placeholder:text-gray-400 focus:border-primary-500" id="password3" placeholder="Type password">
+                    <!--<label class="mb-[10px] md:mb-[12px] text-black dark:text-white font-medium block">
+                        Confirmez le mot de passe
+                    </label>-->
+                    <input [type]="isPassword3Visible ? 'text' : 'password'"  formControlName="confirmpassword" [value]="password3" (input)="onPassword3Input($event)" class="h-[55px] rounded-md text-black dark:text-white border border-gray-200 dark:border-[#172036] bg-white dark:bg-[#0c1427] px-[17px] block w-full outline-0 transition-all placeholder:text-gray-500 dark:placeholder:text-gray-400 focus:border-primary-500" id="password3" placeholder="Confirmez le mot de passe">
                     <button class="absolute text-lg ltr:right-[20px] rtl:left-[20px] bottom-[12px] transition-all hover:text-primary-500" (click)="togglePassword3Visibility()" type="button">
                         <i [ngClass]="isPassword3Visible ? 'ri-eye-line' : 'ri-eye-off-line'"></i>
                     </button>
@@ -49,11 +49,12 @@
                         <i class="material-symbols-outlined">
                             autorenew
                         </i>
-                        Send
+                        Envoyer
                     </span>
                 </button>
                 <p class="mt-[15px] md:mt-[20px]">
-                    Back to <a routerLink="/authentication" class="text-primary-500 transition-all font-semibold hover:underline">Sign In</a>
+                    Retour à <a routerLink="/authentication" class="text-primary-500 transition-all font-semibold hover:underline">
+Se connecter</a>
                 </p>
             </div>
         </div>
